<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vehicleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultVehicle" />

        <TextView
            android:id="@+id/mileageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultMileage" />

        <TextView
            android:id="@+id/finalPriceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultFinalPrice" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requestButton" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>